tests/errors/closing_after_dot.out
cli:1:1: error: Missing closing paren after dot when reading list
( 1 .
^
1 error generated.
